# bfsinkhorn

./: .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: install-and-test.yml  python-package-conda.yml  style.yml
bfsinkhorn/: boson.py  fermion.py  utils.py
figures/: H2_singlet.ipynb  README.md  boson.ipynb  fermion.ipynb
tests/: test_boson.py  test_fermion.py  test_import.py
